add Simples API (hot coffe and cold coffe)

--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -77,74 +77,7 @@
             WE BELIEVE IN <span> GREAT-TASTING COFFEE</span>
           </p>
         </div>
-        <div class="corousel d-flex align-items-center justify-content-center">
-          <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
-                <li class="glide__slide">
-                  <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/A_small_cup_of_coffee.JPG/640px-A_small_cup_of_coffee.JPG"
-                    class="w-100"
-                  />
-                  <h2 class="ppns fw-semibold">Espresso</h2>
-                  <p class="ppns">
-                    As the most popular coffee drink out there, the latte is
-                    comprised of a shot of espresso and steamed milk with just a
-                    touch of foam. It can be ordered plain or with a flavor shot
-                    of anything from vanilla to pumpkin spice.,
-                  </p>
-                </li>
-                <li class="glide__slide">
-                  <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/A_small_cup_of_coffee.JPG/640px-A_small_cup_of_coffee.JPG"
-                    class="w-100"
-                  />
-                  <h2 class="ppns fw-semibold">Espresso</h2>
-                  <p class="ppns">
-                    As the most popular coffee drink out there, the latte is
-                    comprised of a shot of espresso and steamed milk with just a
-                    touch of foam. It can be ordered plain or with a flavor shot
-                    of anything from vanilla to pumpkin spice.,
-                  </p>
-                </li>
-                <li class="glide__slide">
-                  <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Latte_at_Doppio_Ristretto_Chiang_Mai_01.jpg/509px-Latte_at_Doppio_Ristretto_Chiang_Mai_01.jpg"
-                    ,
-                    class="w-100"
-                  />
-                  <h2 class="ppns fw-semibold">Black</h2>
-                  <p class="ppns">
-                    Black coffee is as simple as it gets with ground coffee
-                    beans steeped in hot water, served warm. And if you want to
-                    sound fancy, you can call black coffee by its proper name:
-                    cafe noir. Black coffee is as simple as it gets with ground
-                    coffee beans steeped in hot water, served warm. And if you
-                    want to sound fancy, you can call black coffee by its proper
-                    name: cafe noir.
-                  </p>
-                </li>
-                <li class="glide__slide">
-                  <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Latte_at_Doppio_Ristretto_Chiang_Mai_01.jpg/509px-Latte_at_Doppio_Ristretto_Chiang_Mai_01.jpg"
-                    ,
-                    class="w-100"
-                  />
-                  <h2 class="ppns fw-semibold">Black</h2>
-                  <p class="ppns">
-                    Black coffee is as simple as it gets with ground coffee
-                    beans steeped in hot water, served warm. And if you want to
-                    sound fancy, you can call black coffee by its proper name:
-                    cafe noir. Black coffee is as simple as it gets with ground
-                    coffee beans steeped in hot water, served warm. And if you
-                    want to sound fancy, you can call black coffee by its proper
-                    name: cafe noir.
-                  </p>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+        <corousel-list></corousel-list>
       </article>
 
       <!-- Rekomendasi -->
@@ -161,35 +94,70 @@
             <div class="sliding-slider">
               <p>Aroma</p>
               <div class="range-input1">
-                <input type="range" min="0" max="10" value="0" step="0.1" id="aroma"/>
+                <input
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                  id="aroma"
+                />
                 <div class="value1">
                   <div></div>
                 </div>
               </div>
               <p>Accidity</p>
               <div class="range-input2">
-                <input type="range" min="0" max="10" value="0" step="0.1" id="acid"/>
+                <input
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                  id="acid"
+                />
                 <div class="value2">
                   <div></div>
                 </div>
               </div>
               <p>Body</p>
               <div class="range-input3">
-                <input type="range" min="0" max="10" value="0" step="0.1" id="body"/>
+                <input
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                  id="body"
+                />
                 <div class="value3">
                   <div></div>
                 </div>
               </div>
               <p>Flavor</p>
               <div class="range-input4">
-                <input type="range" min="0" max="10" value="0" step="0.1" id="flavor"/>
+                <input
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                  id="flavor"
+                />
                 <div class="value4">
                   <div></div>
                 </div>
               </div>
               <p>Aftertaste</p>
               <div class="range-input5">
-                <input type="range" min="0" max="10" value="0" step="0.1" id="aftertaste"/>
+                <input
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                  id="aftertaste"
+                />
                 <div class="value5">
                   <div></div>
                 </div>
@@ -205,8 +173,10 @@
             </div>
           </div>
           <!-- Hasil Rekomendasi -->
-          <div class="hasil-rekomendasi-container col-12 col-md-6 d-flex flex-column" id="hasil-rekomendasi-container">
-          </div>
+          <div
+            class="hasil-rekomendasi-container col-12 col-md-6 d-flex flex-column"
+            id="hasil-rekomendasi-container"
+          ></div>
         </section>
       </article>
 
