menghubungkan api ML predictive ke tampilan web.

--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -94,35 +94,70 @@
             <div class="sliding-slider">
               <p>Aroma</p>
               <div class="range-input1">
-                <input id="aroma" type="range" min="0" max="10" value="0" step="0.1" />
+                <input
+                  id="aroma"
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                />
                 <div class="value1">
                   <div></div>
                 </div>
               </div>
               <p>Acidity</p>
               <div class="range-input2">
-                <input id="acid" type="range" min="0" max="10" value="0" step="0.1" />
+                <input
+                  id="acid"
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                />
                 <div class="value2">
                   <div></div>
                 </div>
               </div>
               <p>Body</p>
-              <div  class="range-input3">
-                <input id="body" type="range" min="0" max="10" value="0" step="0.1" />
+              <div class="range-input3">
+                <input
+                  id="body"
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                />
                 <div class="value3">
                   <div></div>
                 </div>
               </div>
               <p>Flavor</p>
               <div class="range-input4">
-                <input id="flavor" type="range" min="0" max="10" value="0" step="0.1" />
+                <input
+                  id="flavor"
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                />
                 <div class="value4">
                   <div></div>
                 </div>
               </div>
               <p>Aftertaste</p>
               <div class="range-input5">
-                <input id="after-taste" type="range" min="0" max="10" value="0" step="0.1" />
+                <input
+                  id="after-taste"
+                  type="range"
+                  min="0"
+                  max="10"
+                  value="0"
+                  step="0.1"
+                />
                 <div class="value5">
                   <div></div>
                 </div>
@@ -141,51 +176,7 @@
           <!-- Hasil Rekomendasi -->
           <div
             class="hasil-rekomendasi-container col-12 col-md-6 d-flex flex-column"
-          >
-            <div class="hasil-rekomendasi p-5 m-auto d-grid">
-              <div class="row">
-                <div class="rating text-center col-4 col-lg-2 d-grid">
-                  <p class="m-0 mt-auto">Rating</p>
-                  <h1 class="mb-auto">96</h1>
-                </div>
-                <div class="col-8 col-lg-10 d-grid">
-                  <h1 class="m-0 mt-auto">David's Nose</h1>
-                  <p class="m-0 mb-auto">Honduras Blue Hole Estates</p>
-                </div>
-              </div>
-              <div class="row my-3">
-                <div class="para col-6 col-lg-3">
-                  <p>Aroma</p>
-                  <p>Acid</p>
-                  <p>Body</p>
-                  <p>Flavor</p>
-                  <p>AfterTaste</p>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <p>9.0</p>
-                  <p>8.0</p>
-                  <p>9.0</p>
-                  <p>9.0</p>
-                  <p>8.0</p>
-                </div>
-                <div class="col-12 col-lg-6 d-flex">
-                  <div class="desc-hasil d-flex flex-column">
-                    <p>
-                      <span class="fw-bold">Description :</span> Remarkably
-                      sweet, rich-toned, deeply floral. Star jasmine, lychee,
-                      dried ginger, cocoa nib, myrrh in aroma and cup. Sweetly
-                      tart structure with juicy, lively acidity; delicate, very
-                      syrupy mouthfeel. Crisp, long, fruit- and cocoa-toned
-                      finish.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <button id="button-other-coffee" class="btn btn-sm btn-primary text-white fw-bold me-auto">
-                See other coffee
-              </button>
-            </div>
-          </div>
+          ></div>
         </section>
       </article>
 
@@ -198,13 +189,16 @@
           <div class="row">
             <div class="col">
               <h1 class="osw">COFFEE RECOMMENDATIONS</h1>
-              <p>We recommend coffee based on the coffee you are looking for.</p>
+              <p>
+                We recommend coffee based on the coffee you are looking for.
+              </p>
             </div>
           </div>
         </div>
-        <section id="recom-container" class="flex-grow-1 rounded-4 shadow bg-light m-2 p-2">
-          
-        </section>
+        <section
+          id="recom-container"
+          class="flex-grow-1 rounded-4 shadow bg-light m-2 p-2"
+        ></section>
       </article>
 
       <!-- about section -->
