--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recoffe</title>
+    <title>RECOFFEE</title>
   </head>
   <body>
     <header>
@@ -40,9 +40,6 @@
                 <a class="nav-link ppns" href="#find">Find</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link ppns" href="#shop">Shop</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link ppns" href="#about">About</a>
               </li>
               <li class="nav-item">
@@ -65,9 +62,9 @@
             Find coffee based on your preferences
           </p>
         </section>
-        <button type="button" class="btn btn-primary btn-lg text-white fw-bold">
+        <a href="#find" class="btn btn-primary btn-lg text-white fw-bold">
           F I N D
-        </button>
+        </a>
       </article>
 
       <!--Menu + Corousel-->
