Update layout footer

--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -237,7 +237,7 @@
         id="foot"
         class="d-flex p-3 flex-lg-row flex-column-reverse justify-content-between align-items-center"
       >
-        <div class="ppns text-wrap">Copyright&copy; RECOFFEE 2022</div>
+        <div class="ppns text-wrap">Copyright&copy; RECCOFFEE 2022</div>
       </div>
     </footer>
   </body>
