--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="dicoding:email" content="hanifalirsyad.123@students.amikom.ac.id">
+    <meta
+      name="dicoding:email"
+      content="hanifalirsyad.123@students.amikom.ac.id"
+    />
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>RECCOFFEE</title>
   </head>
